@@ -1,9 +1,9 @@
    <!-- Footer -->
    <script src="[% links.js %]highlight.min.js"></script>
-   <script>hljs.initHighlightingOnLoad();</script>
    <script src="[% links.js %]mootools.min.js"></script>
    <script src="[% links.js %]classes.js"></script>
    <script>
+      hljs.initHighlightingOnLoad();
       var behaviour = new Behaviour( {
          baseURI : '[% links.base_uri %]',
          formName: 'markdown'
