@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Navigation uses new iterator. No more hidden state
           - Rewriting docs tree walker
           - Refactored docs tree to cache and recalculate on update
           - Added XML view
